Closed Bug 244235 Opened 20 years ago Closed 20 years ago

[FIX]window.sizeToContent should flush out reflows first

Categories

(Core :: DOM: Core & HTML, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha2

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

sizeToContent should probably flush out content, restyles, and reflows, before
getting the presshell's visible area.  That would solve the issue mentioned in
bug 230170 comment 7 (though the restyle events should perhaps still block onload?)
Attached patch PatchSplinter Review
Assignee: general → bzbarsky
Status: NEW → ASSIGNED
Comment on attachment 149463 [details] [diff] [review]
Patch

jst, wanna review?  This one is nice and straightforward... ;)
Attachment #149463 - Flags: superreview?(jst)
Attachment #149463 - Flags: review?(jst)
Priority: -- → P1
Summary: window.sizeToContent should flush out reflows first → [FIX]window.sizeToContent should flush out reflows first
Target Milestone: --- → mozilla1.8alpha2
Comment on attachment 149463 [details] [diff] [review]
Patch

r+sr=jst
Attachment #149463 - Flags: superreview?(jst)
Attachment #149463 - Flags: superreview+
Attachment #149463 - Flags: review?(jst)
Attachment #149463 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: