Make sure to flush out content and style updates when calling sizeToContent. Bug 244235, r+sr=jst